# AMD_Robot_Hackathon

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  robot.py
mission/code/: main.py  robot.py  run_task.sh  voice_assistant.py
mission/code/scripts/: inference-record.sh  inference-rtc.sh  inference_async.sh  inference_sync.sh  notes.md  operate_camera.sh  record.sh  split_dataset.sh  test-gpu.py
mission/data/: README.md
mission/training/: README.md
mission/wandb/latest-run/: run-dsligd2u.wandb
mission/wandb/pick-carrot/wandb/latest-run/files/: wandb-metadata.json
mission/wandb/pick_everything/wandb/latest-run/files/: requirements.txt  wandb-summary.json
mission/wandb/pick_everything/wandb/run-20251214_044056-vso7pqk5/: run-vso7pqk5.wandb
mission/wandb/pick_everything/wandb/run-20251214_044056-vso7pqk5/files/: config.yaml  wandb-metadata.json
mission/wandb/run-20251213_191319-dsligd2u/files/: config.yaml  wandb-summary.json
