[project]
name = "le-robot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "elevenlabs>=2.26.1",
    "lerobot[all]>=0.4.2",
    "openai>=2.11.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.1",
    "speechrecognition>=3.14.4",
    "torchcodec>=0.5",
]
